2014-12-19  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlMemoryStream: add a new class for safe memory access that
        throws exception on failures.

2014-12-18  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlMaster: Fixed read() trying to calculate the end position of
        elements with an unknown size. This avoids endless loops and
        assertions in certain cases. See https://trac.bunkus.org/ticket/1089

2013-03-19 mosu
New 1.3.0 version:
    * Note that this version is not binary compatible to its predecessors.
    - Compilation warning fixes
    - GetValue() and SetValue() functions for EbmlFloat/EbmlSInteger/EbmlUInteger
    - GetValue(), SetValue(), GetValueUTF8(), SetValueUTF8() functions for EbmlString/EbmlUnicodeString
    - Date values use 64bit integers
    - Integer conversion operators were made 'const'
    - GetElementList() function for EbmlMaster providing a reference to the underlying std::vector<> for better interaction with the C++ standard library
    - New constructor for UTFstring taking a single std::wstring
    - Increased library .so name to .4 due to binary incompatible changes.
    - Removed the Debian build files from our package.

2011-09-23 robux4/mosu
New 1.2.2 version:
    - fix usage of the DEBUG #define (use LIBEBML_DEBUG instead)
    - The EbmlCodeVersion variable now resides in the library instead of being declared static in the header file.
    - only use the test element to read once in the loop

2011-06-26 robux4/mosu
New 1.2.1 version:
    - fix the constructor of CRTError in StdIOCallback (patch from Graham 'gbooker' Booker)
    - fix the size returned by MemIOCallback::read() when reaching the end of the buffer
    - add a macro to define signed integer elements that have a default value
    - fix compilation of debug builds on win32
    - fix for Sun Studio C compiler

2011-01-30 robux4/mosu
New 1.2.0 version:
    - no need to put the internal code of EbmlCrc32 in the public header